--- a/README
+++ b/README
@@ -3,6 +3,7 @@ DISCLAIMER: Use this at your own risk.
 We are not affiliated with GoodGameStudios
 
 This is a botting service that lets you run cheat tools on multiple accounts at once.
+This also gives access to Discord features for those who want to setup an alliance Discord server.
 
 Some info on the plugins:
   Beri cooldown is bypassed.
