--- a/README
+++ b/README
@@ -2,6 +2,9 @@ Hey! I am currently looking for native speakers of other languages to help make 
 ؜؜For those who wish to make this service more accessable or wish access to extra-plugins:
 Talk to me on Discord for a fast response: darrenthebozz.
 
+Special Thanks:
+  Timicim (For providing help with Turkish translation.)
+
 Extra Plugins:
   Berimond Kingdom
   Barracks
