Add Polish translation acknowledgment in README

--- a/README
+++ b/README
@@ -3,6 +3,7 @@ Hey! I am currently looking for native speakers of other languages to help make 
 Special Thanks:
   Timicim & Un1c4on (For Turkish translation)
   xLukaZ (For German translation)
+  wojts8 (For Polish translation)
 
 Extra Plugins:
   Berimond Kingdom
