Add Arabic translation credit and refine support message
Updated README to include Arabic translation credit and modified wording for user support.

--- a/README
+++ b/README
@@ -4,11 +4,13 @@ Special Thanks:
   Timicim & Un1c4on (For Turkish translation)
   xLukaZ (For German translation)
   wojts8 (For Polish translation)
+  YAMI SOHAIB (For Arabic translation)
 
 DISCLAIMER: Use this at your own risk.
 We are not affiliated with GoodGameStudios.
 
-Please feel free to message me if you face any issues on setup or any problems with my software.
+Please feel free to message me if you face any issues on setup or any problems with my software
+Preferably please put it in the issues tab for features.
 
 This is a botting service that lets you run cheat tools on multiple accounts at once.
 This also gives access to Discord features for those who want to setup an alliance Discord server.
