Arabic translation changes

--- a/website/public/locales/ar.json
+++ b/website/public/locales/ar.json
@@ -1,20 +1,20 @@
 {
-	"startBanner": "سيكون من دواعي سروري أن تقوموا بوضع مشاكلكم على قسم المشاكل في موقع GitHub أو مراسلتي مباشرة على Discord أو البريد الإلكتروني.",
-	"ggeConfigGenerated": "تم إنشاء ملف ggeConfig.json.",
-	"couldntFindPrivateKey": "لم يتم العثور على المفتاح الخاص! جارٍ الرجوع إلى وضع HTTP.",
-	"couldntFindCertificate": "تعذر العثور على الشهادة! جارٍ الرجوع إلى وضع HTTP.",
-	"couldntAccessFont": "تعذر الوصول إلى الخط",
-	"couldntSetupDiscord": "تعذر إعداد برنامج ديسكورد.",
-	"configurationsMissing": "التكوينات التالية مفقودة:",
-	"missingDiscordID": "تعذر الحصول على معرف ديسكورد .",
-	"missingDiscordUserID": "تعذر الحصول على معرف مستخدم ديسكورد.",
-	"missingGuildID": "تعذر الحصول على معرف النقابة.",
-	"uuidInvalid": "معرّف المستخدم غير صالح.",
-	"gameAccountSessionAlreadyInUse": "جلسة حساب اللعبة قيد الاستخدام بالفعل.",
-	"failedToJoinEventServer" : "فشل الانضمام إلى خادم الأحداث.",
-	"noThreadWorker": "لم يتم العثور على عامل الخيط.",
-	"couldntFindWebClientIndex" : "تعذر العثور على فهرس مستخدم عميل الويب.",
-	"started": "بدأ.",
-	"restartCanceledReasonBotStoppedByUser" : "سبب إلغاء إعادة التشغيل: تم إيقاف البوت بواسطة المستخدم.",
-	"restartDelay" : "انتهى عمل البوت. جارٍ الانتظار 10 ثوانٍ قبل إعادة التشغيل لتجنب السبام "
+  "startBanner": "لو عندك أي مشكلة، ياريت تبلغنا على GitHub أو تتواصل معنا عبر Discord أو البريد الإلكتروني. دعمك يهمّنا.",
+  "ggeConfigGenerated": "تم إعداد ملف اللعبة بنجاح.",
+  "couldntFindPrivateKey": "تعذر تشغيل النظام بشكل آمن. سيتم التشغيل بوضع عادي.",
+  "couldntFindCertificate": "لم يتم العثور على شهادة الأمان. سيتم التشغيل بدون حماية.",
+  "couldntAccessFont": "تعذر تحميل الخط. قد لا تظهر بعض النصوص بشكل صحيح.",
+  "couldntSetupDiscord": "تعذر الاتصال بـ Discord في الوقت الحالي.",
+  "configurationsMissing": "بعض الإعدادات غير مكتملة.",
+  "missingDiscordID": "لم يتم العثور على حساب Discord الخاص بك.",
+  "missingDiscordUserID": "تعذر التعرف على مستخدم Discord.",
+  "missingGuildID": "لم يتم العثور على السيرفر المرتبط بالحساب.",
+  "uuidInvalid": "بيانات الحساب غير صحيحة. يرجى التأكد منها.",
+  "gameAccountSessionAlreadyInUse": "الحساب مستخدم حاليًا من جهاز آخر.",
+  "failedToJoinEventServer": "تعذر الاتصال بسيرفر الحدث. حاول مرة أخرى لاحقًا.",
+  "noThreadWorker": "حدث خطأ داخل النظام. يرجى إعادة تشغيل البرنامج.",
+  "couldntFindWebClientIndex": "تعذر تحميل بيانات الحساب من المتصفح.",
+  "started": "تم تشغيل البرنامج بنجاح.",
+  "restartCanceledReasonBotStoppedByUser": "تم إلغاء إعادة التشغيل لأنك قمت بإيقاف البرنامج.",
+  "restartDelay": "تم إيقاف البرنامج مؤقتًا. سيتم إعادة التشغيل بعد 10 ثوانٍ..."
 }
