Cleanup and organise react code

--- a/website/public/locales/en.json
+++ b/website/public/locales/en.json
@@ -11,10 +11,83 @@
 	"missingGuildID": "Could not get guild id.",
 	"uuidInvalid": "User Identifier is not valid.",
 	"gameAccountSessionAlreadyInUse": "Game account session already in use.",
-	"failedToJoinEventServer" : "Failed to join event server.",
+	"failedToJoinEventServer": "Failed to join event server.",
 	"noThreadWorker": "Thread worker not found.",
-	"couldntFindWebClientIndex" : "Couldn't find index of web client user.",
+	"couldntFindWebClientIndex": "Couldn't find index of web client user.",
 	"started": "Started.",
-	"restartCanceledReasonBotStoppedByUser" : "Restart canceled reason: Bot was stopped by user.",
-	"restartDelay" : "Bot process exited. Waiting 10 seconds before restart to avoid spam..."
+	"restartCanceledReasonBotStoppedByUser": "Restart canceled reason: Bot was stopped by user.",
+	"restartDelay": "Bot process exited. Waiting 10 seconds before restart to avoid spam...",
+	"Name": "Name",
+	"Description": "Description",
+	"Status": "Status",
+	"Start": "Start",
+	"Stop": "Stop",
+	"Settings": "Settings",
+	"Save": "Save",
+	"Remove": "Remove",
+	"Logs": "LOGS",
+	"Link Discord": "Link Discord",
+	"Username": "Username",
+	"Password": "Password",
+	"Server": "Server",
+	"Plugins": "Plugins",
+	"System": "System",
+	"Horse Settings": "Horse Settings",
+	"Attack Settings": "Attack Settings",
+	"Use Feather": "Use Feather",
+	"Use Coin": "Use Coin",
+	"Use Time Skips": "Use Time Skips",
+	"Attack Left Flank": "Attack Left Flank",
+	"Attack Middle": "Attack Middle",
+	"Attack Right Flank": "Attack Right Flank",
+	"Attack Courtyard": "Attack Courtyard",
+	"Max Waves": "Max Waves",
+	"Attack Delay (Seconds)": "Attack Delay (Seconds)",
+	"Attack Delay Randomization (Seconds)": "Attack Delay Randomization (Seconds)",
+	"Attack Barrons (Great Empire)": "Attack Barrons (Great Empire)",
+	"Attack Barrons (Fire Peaks)": "Attack Barrons (Fire Peaks)",
+	"Attack Barrons (Glacier)": "Attack Barrons (Glacier)",
+	"Attack Barrons (Burning Sands)": "Attack Barrons (Burning Sands)",
+	"Attack Fortress (Fire Peaks)": "Attack Fortress (Fire Peaks)",
+	"Attack Fortress (Everwinter Glacier)": "Attack Fortress (Everwinter Glacier)",
+	"Attack Fortress (Burning Sands)": "Attack Fortress (Burning Sands)",
+	"Attack Nomad Camps": "Attack Nomad Camps",
+	"Attack Samurai Camps": "Attack Samurai Camps",
+	"Attack Beri Camps": "Attack Beri Camps",
+	"Attack Khan": "Attack Khan",
+	"Attack Aqua Forts": "Attack Aqua Forts",
+	"Attack Level 40": "Attack Level 40",
+	"Attack Level 50": "Attack Level 50",
+	"Attack Level 60": "Attack Level 60",
+	"Attack Level 70": "Attack Level 70",
+	"Attack Level 80": "Attack Level 80",
+	"Hits Barrons": "Hits Barrons",
+	"Attack": "Attack",
+	"Handles Hits": "Handles Hits",
+	"commander": "Commander",
+	"Commander": "Commander",
+	"Res Send": "Resource Sender",
+	"Ressend": "Resource Sender",
+	"Feast": "Feast",
+	"GetRegion": "Get Regions",
+	"Get Regions": "Get Regions",
+	"Mead replace": "Mead Repair",
+	"MeadRep": "Mead Repair",
+	"Timer": "Timer",
+	"Discord": "Discord Bot",
+	"Outgoing": "Outgoing",
+	"Fortress": "Fortress",
+	"Aqua Tower": "Aqua Tower",
+	"Slash Commands": "Slash Commands",
+	"Alert": "Alert",
+	"Chat": "Chat",
+	"Aquaisland": "Aquaisland",
+	"Hits fortresses": "Hits fortresses",
+	"Hits Aqua Forts": "Hits Aqua Forts",
+	"Hits Nomad Camps": "Hits Nomad Camps",
+	"Hits Samurai Camps": "Hits Samurai Camps",
+	"Hits Beri Camps": "Hits Beri Camps",
+	"Hits Khan Camps": "Hits Khan Camps",
+	"Sends Resources": "Sends Resources",
+	"Repair for Mead": "Repair for Mead"
 }
