--- a/website/public/locales/ar.json
+++ b/website/public/locales/ar.json
@@ -16,5 +16,77 @@
   "couldntFindWebClientIndex": "تعذر تحميل بيانات الحساب من المتصفح.",
   "started": "تم تشغيل البرنامج بنجاح.",
   "restartCanceledReasonBotStoppedByUser": "تم إلغاء إعادة التشغيل لأنك قمت بإيقاف البرنامج.",
-  "restartDelay": "تم إيقاف البرنامج مؤقتًا. سيتم إعادة التشغيل بعد 10 ثوانٍ..."
+  "restartDelay": "تم إيقاف البرنامج مؤقتًا. سيتم إعادة التشغيل بعد 10 ثوانٍ...",
+  "Name": "الاسم",
+  "Description": "الوصف",
+  "Status": "الحالة",
+  "Start": "بدء",
+  "Stop": "إيقاف",
+  "Settings": "الإعدادات",
+  "Save": "حفظ",
+  "Remove": "حذف",
+  "Logs": "السجل",
+  "Link Discord": "ربط ديسكورد",
+  "Username": "اسم المستخدم",
+  "Password": "كلمة المرور",
+  "Server": "السيرفر",
+  "Plugins": "الإضافات",
+  "System": "النظام",
+  
+  "Horse Settings": "إعدادات الأحصنة",
+  "Attack Settings": "إعدادات الهجوم",
+  "Use Feather": "استخدام الريش",
+  "Use Coin": "استخدام العملات",
+  "Use Time Skips": "تخطي الوقت",
+  "Attack Left Flank": "الهجوم من الجناح الأيسر",
+  "Attack Middle": "الهجوم من الوسط",
+  "Attack Right Flank": "الهجوم من الجناح الأيمن",
+  "Attack Courtyard": "الهجوم على الفناء",
+  "Max Waves": "أقصى عدد موجات",
+  "Attack Delay (Seconds)": "تأخير الهجوم (بالثواني)",
+  "Attack Delay Randomization (Seconds)": "تأخير عشوائي للهجوم (بالثواني)",
+  
+  "Attack Barrons (Great Empire)": "مهاجمة اللصوص (الإمبراطورية)",
+  "Attack Barrons (Fire Peaks)": "مهاجمة اللصوص (قمم النار)",
+  "Attack Barrons (Glacier)": "مهاجمة اللصوص (الجليد الأبدي)",
+  "Attack Barrons (Burning Sands)": "مهاجمة اللصوص (الصحراء الحارقة)",
+  "Attack Fortress (Fire Peaks)": "مهاجمة الحصون (قمم النار)",
+  "Attack Fortress (Everwinter Glacier)": "مهاجمة الحصون (الجليد الأبدي)",
+  "Attack Fortress (Burning Sands)": "مهاجمة الحصون (الصحراء)",
+  "Attack Nomad Camps": "مهاجمة معسكرات البدو",
+  "Attack Samurai Camps": "مهاجمة معسكرات الساموراي",
+  "Attack Beri Camps": "مهاجمة معسكرات بيريموند",
+  "Attack Khan": "مهاجمة معسكر الخان",
+  "Attack Aqua Forts": "مهاجمة جزر العاصفة",
+  "Attack Level 40": "مهاجمة مستوى 40",
+  "Attack Level 50": "مهاجمة مستوى 50",
+  "Attack Level 60": "مهاجمة مستوى 60",
+  "Attack Level 70": "مهاجمة مستوى 70",
+  "Attack Level 80": "مهاجمة مستوى 80",
+  "Hits Barrons": "يهاجم اللصوص تلقائيًا",
+  "Attack": "الهجوم",
+  "Handles Hits": "إدارة الهجمات",
+  "Res Send": "إرسال الموارد",
+  "Ressend": "إعادة إرسال الموارد",
+  "Feast": "الوليمة",
+  "Mead replace": "إصلاح باستخدام الشراب",
+  "MeadRep": "إصلاح الشراب",
+  "Timer": "المؤقت",
+  "Discord": "بوت ديسكورد",
+  "Outgoing": "الرسائل الصادرة",
+  "Fortress": "الحصون",
+  "Aqua Tower": "أبراج العاصفة",
+  "Slash Commands": "أوامر الدردشة",
+  "Alert": "تنبيه",
+  "Chat": "الدردشة",
+  "Aquaisland": "جزر العاصفة",
+  
+  "Hits fortresses": "يهاجم الحصون تلقائيًا",
+  "Hits Aqua Forts": "يهاجم جزر العاصفة",
+  "Hits Nomad Camps": "يهاجم معسكرات البدو",
+  "Hits Samurai Camps": "يهاجم معسكرات الساموراي",
+  "Hits Beri Camps": "يهاجم معسكرات بيريموند",
+  "Hits Khan Camps": "يهاجم معسكر الخان",
+  "Sends Resources": "يرسل الموارد تلقائيًا",
+  "Repair for Mead": "إصلاح باستخدام الشراب"
 }
