--- a/website/public/locales/pl.json
+++ b/website/public/locales/pl.json
@@ -11,10 +11,76 @@
 	"missingGuildID": "Nie udało się znaleźć id serwera.",
 	"uuidInvalid": "Identyfikator Użytkownika jest nieprawidłowy.",
 	"gameAccountSessionAlreadyInUse": "Sesja konta gry jest już używana.",
-	"failedToJoinEventServer" : "Nie udało się dołączyć do serwera z wydarzeniem.",
+	"failedToJoinEventServer": "Nie udało się dołączyć do serwera z wydarzeniem.",
 	"noThreadWorker": "Nie znaleziono pracownika wątku.",
-	"couldntFindWebClientIndex" : "Nie udało się znaleźć indeksu użytkownika strony.",
+	"couldntFindWebClientIndex": "Nie udało się znaleźć indeksu użytkownika strony.",
 	"started": "Uruchomiono.",
-	"restartCanceledReasonBotStoppedByUser" : "Ponowne uruchomienie anulowane powód: Bot został zatrzymany przez użytkownika.",
-	"restartDelay" : "Proces bota zakończony... Czekanie 10 sekund przed ponownym uruchomieniem aby uniknąć spamu"
+	"restartCanceledReasonBotStoppedByUser": "Ponowne uruchomienie anulowane powód: Bot został zatrzymany przez użytkownika.",
+	"restartDelay": "Proces bota zakończony... Czekanie 10 sekund przed ponownym uruchomieniem aby uniknąć spamu",
+	"Name": "Nazwa",
+	"Description": "Opis",
+	"Status": "Status",
+	"Start": "Włącz",
+	"Stop": "Wyłącz",
+	"Settings": "Ustawienia",
+	"Save": "Zapisz",
+	"Remove": "Usuń",
+	"Logs": "Logi",
+	"Link Discord": "Połącz z Discordem",
+	"Username": "Nazwa użytkownika",
+	"Password": "Hasło",
+	"Server": "Serwer",
+	"Plugins": "Wtyczki",
+	"System": "System",
+	"Horse Settings": "Ustawienia konia",
+	"Attack Settings": "Ustawienia ataku",
+	"Use Feather": "Używać piórek",
+	"Use Coin": "Używać monet",
+	"Use Time Skips": "Używać pomijaczy czasu",
+	"Attack Left Flank": "Atakować lewą flanke",
+	"Attack Middle": "Atakować środek",
+	"Attack Right Flank": "Atakować prawą flanke",
+	"Attack Courtyard": "Atakować dziedziniec",
+	"Max Waves": "Maksymalna ilość fal",
+	"Attack Delay (Seconds)": "Opóżnienie między atakami (Sekundy)",
+	"Attack Delay Randomization (Seconds)": "Zróżnicowanie czasu ataku (Sekundy)",
+	"Attack Barrons (Great Empire)": "Atakowanie Baronów (Wielkie Cesarstwo)",
+	"Attack Barrons (Fire Peaks)": "Atakowanie Baronów (Szczyty)",
+	"Attack Barrons (Glacier)": "Atakowanie Baronów (Zima)",
+	"Attack Barrons (Burning Sands)": "Atakowanie Baronów (Piaski)",
+	"Attack Fortress (Fire Peaks)": "Atakowanie fortec (Szczyty)",
+	"Attack Fortress (Everwinter Glacier)": "Atakowanie fortec (Zima)",
+	"Attack Fortress (Burning Sands)": "Atakowanie fortec (Piaski)",
+	"Attack Nomad Camps": "Atakowanie obozów nomadów",
+	"Attack Samurai Camps": "Atakowanie obozów samurajów",
+	"Attack Beri Camps": "Atakowanie obozów berimondu",
+	"Attack Khan": "Atakowanie chana",
+	"Attack Aqua Forts": "Atakowanie fortów na archipelagu",
+	"Hits Barrons": "Atakuje barony",
+	"Attack": "Atak",
+	"Handles Hits": "Obsługuje ataki",
+	"commander": "dowódca",
+	"Commander": "Dowódca",
+	"Res Send": "Wysyłanie zasobów",
+	"Ressend": "Wysyłanie zasobów",
+	"Feast": "Uczta",
+	"Mead replace": "Uzupełnianie miodu pitnego",
+	"MeadRep": "Uzupełnianie miodu",
+	"Timer": "Czasomierz",
+	"Discord": "Discord Bot",
+	"Outgoing": "Wychodzące",
+	"Fortress": "Forteca",
+	"Aqua Tower": "Fort na sztormie",
+	"Slash Commands": "Polecenia z ukośnikiem (Slash Commands)",
+	"Alert": "Alarm",
+	"Chat": "Chat",
+	"Aquaisland": "Wyspa na Sztormie",
+	"Hits fortresses": "Atakuje Fortece",
+	"Hits Aqua Forts": "Atakuje forty na akwie",
+	"Hits Nomad Camps": "Atakuje obozy nomada",
+	"Hits Samurai Camps": "Atakuje obozy samuraja",
+	"Hits Beri Camps": "Atakuje obozy berimondu",
+	"Hits Khan Camps": "Atakuje chana",
+	"Sends Resources": "Wysyła zasoby",
+	"Repair for Mead": "Uzupełnia miód pitny na zamku"
 }
