Handle language in logs

--- a/website/public/locales/en.json
+++ b/website/public/locales/en.json
@@ -65,7 +65,6 @@
 	"Attack": "Attack",
 	"Handles Hits": "Handles Hits",
 	"commander": "Commander",
-	"Commander": "Commander",
 	"Res Send": "Resource Sender",
 	"Ressend": "Resource Sender",
 	"Feast": "Feast",
@@ -89,5 +88,131 @@
 	"Hits Beri Camps": "Hits Beri Camps",
 	"Hits Khan Camps": "Hits Khan Camps",
 	"Sends Resources": "Sends Resources",
-	"Repair for Mead": "Repair for Mead"
+	"Repair for Mead": "Repair for Mead",
+	"botConfigReloaded": "Config has been reload",
+	"closedReason": "Closed forcefully reason: ",
+	"timedOut": "Timed out",
+	"errorCount": "Error Count: ",
+	"hitCount": "Hit count: ",
+	"retryLogin": "Retry Login in: ",
+	"retryLoginSeconds": " seconds",
+	"retryLoginHours": " hours",
+	"loggedIn": "Logged in",
+	"loggedInWithoutEventData": " (without event data)",
+	"featuresMightNotWork": "Some features might not work.",
+	"grabbedFortuneTellerFortune": "Grabbed fortune teller fortune",
+	"GrabbedOffering": "Grabbed offering: ",
+	"grabbedLudwig": "Ludwig",
+	"grabbedKnight": "Knight",
+	"grabbedBeatrice": "Beatrice",
+	"noMoreSkips": "No more skips",
+	"usingSkip": "Using Skip: ",
+	"couldntGetAsset": "Couldnt get asset falling back",
+	"consumed": "Consumed ",
+	"notEnoughFoodToFeast": "Not enough food to feast",
+	"wontRunWithoutStormUnlocked": "Won't run without storm unlocked",
+	"dontNeedToSendMead": "Don't need to send mead",
+	"notEnoughTimeForMeadReplace": "You may lose your troops aim above: ",
+	"hoursForFoodMeadReplace": " Hours of food consumption",
+	"dontNeedMeadForAnother": "Don't need mead for another: ",
+	"hoursMeadReplace": " hours",
+	"sentMeadReplace": "Sent ",
+	"meadToMeadReplace": "mead to ",
+	"failedToSendMead": "Failed to send Mead to ",
+	"sentResSend": "Sent ",
+	"toResSend": "to ",
+	"hoursOptionIsNotNumber": "Hours option is not number",
+	"noStablesCoinHorse": "No stables detected defaulting to walking",
+	"attackDelayAttack": "Attack delay: ",
+	"takingBreakPreventBan": "Taking a break to prevent ban for: ",
+	"failedToHandleAttack": "Failed to handle attack correctly",
+	"shuttingDownEvent": "Shutting down event reason: ",
+	"eventEnded": "Event Ended",
+	"hittingTargetAttack": "Hitting target ",
+	"tillImpactAttack": " till impact",
+	"broughtCoins": "Brought Coins",
+	"broughtDeco": "Brought Deco",
+	"broughtXP": "Brought XP",
+	"waitingForNextPossibleHit": "Waiting ",
+	"waitingForNextPossibleHit2": " for next possible hit",
+	"rageTooHigh": "Rage higher than expected",
+	"rageTrigger": "Rage Triggered",
+	"scoreReached": "Score Reached",
+	"noMatchingCommandWasFound": "No matching command was found ",
+	"noCommands": "No commands",
+	"missingChannel": "Missing Channel",
+	"barracksLevelNotDefined": "Level option was not defined",
+	"cantFindSourceCastle": "Could not find source castle",
+	"couldNotRecruitReason": "Could not recruit reason: ",
+	"couldNotRecruitReasonTroopLimitReached": "Troop limit reached",
+	"failedToRecruitTroops": "Failed to recruit troops at: ",
+	"recruitedTroops": " Troops recruited",
+	"shouldntRunOutOfSkips": "Shouldn't run out of skips",
+	"buyingFeathers": "Buying fast horse feathers",
+	"buying5MinuteSkips": "Buying 5 minute skips",
+	"laddersBrought": " Ladders brought",
+	"shieldsBrought": " Shields brought",
+	"couldntFindPlayer": "Could not find player",
+	"notFleeing": "Not Fleeing Reason: ",
+	"attackerTooWeak": "Attacker too weak",
+	"underBird": "Under bird",
+	"noobProtection": "Noob protection",
+	"cantSeeArmy": "Can't see army",
+	"troopCountTooSmall": "Troop count too small",
+	"tooLittleTroopsInCastle": "Too little troops in castle",
+	"noValidCastleChoice": "No valid castle choice",
+	"tryingToSend": "Trying to send ",
+	"tryingToSendTo": " To ",
+	"shopBuying": "Buying ",
+	"broughtShop": "Brought everything in shop",
+	"eventNotRunning": "Event not running",
+	"affluenceTicketsSpent": "Affluence Tickets Spent",
+	"couldNotOpenBerimond": "Could not open berimond need: 10k stone and wood",
+	"failedToSendTroopsOver": "Failed to send troops over",
+	"troopsMovedOver": " troops moved over",
+	"couldntGatherTools": "Could not gather tools",
+	"tryingToReroll": "Trying to reroll: ",
+	"loading": "loading...",
+	"couldntFindSkip": "Couldn't find skip",
+	"couldntRecruitMoreTroops": "Could not recruit more troops",
+	"feast" : "Feast",
+	"meadReplace" : "Mead Replace",
+	"resourceSend" : "Resource Send",
+	"timer": "Timer",
+	"attack": "Attack",
+	"sharedBarronAttackLogic": "Barron",
+	"sharedFortressAttackLogic": "Fortress",
+	"incomingAttacks": "Incoming Attacks",
+	"aquaIsland": "Aqua Island",
+	"aquaTower": "Aqua Tower",
+	"attackStormForts": "Attack Storm Forts",
+	"attackSamurai": "Attack Samurai",
+	"attackNomads": "Attack Nomads",
+	"attackKhan": "Attack Khan",
+	"chat": "Chat",
+	"discord": "Discord",
+	"fortress": "Fortess",
+	"outgoingAttacks": "Outgoing Attacks",
+	"score": "Score",
+	"barracks": "Barracks",
+	"stationOnHit": "Station on Hit",
+	"buyTools": "Buy Tools",
+	"blacksmith": "Blacksmith",
+	"spendAffluence": "Spend Affluence",
+	"extraSlashCommands": "Slash Commands",
+	"grandTornament": "Grand Tornament",
+	"attackBarronsBurningSands": "Attack Barrons (Burning Sands)",
+	"attackBarronsEverWinterGlacier": "Attack Barrons (Ever Winter Glacier)",
+	"attackBarronsFirePeaks": "Attack Barrons (Fire Peaks)",
+	"attackBarronsGreatEmpire": "Attack Barrons (Great Empire)",
+	"attackBerimond": "Attack Berimond",
+	"attackFortressesBurningSands": "Attack Fortress (Burning Sands)",
+	"attackFortressesEverWinterGlacier": "Attack Fortress (Ever Winter Glacier)",
+	"attackFortressesFirePeaks": "Attack Fortress (Fire Peaks)",
+	"externalEventHelper": "OR/BTH Buy Feathers/Troops",
+	"helpRequests": "Help requests",
+	"nomadShop": "Nomad Shop",
+	"samShop": "Samurai Shop",
+	"attackBerimondKingdom": "Attack Berimond Kingdom"
+	
 }
