Update README to request language assistance
Added a note about seeking native speakers for translations and mentioned the testing branch.

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 Hey! I am currently looking for native speakers of other languages to help make this project more accessable for other regions.
+Check out the testing branch help make this repo amazing :D
 
 Special Thanks:
   Timicim & Un1c4on (For Turkish translation)
