A *lot* of changes

--- a/website/public/locales/ar.json
+++ b/website/public/locales/ar.json
@@ -1,92 +1,182 @@
 {
-  "startBanner": "لو عندك أي مشكلة، ياريت تبلغنا على GitHub أو تتواصل معنا عبر Discord أو البريد الإلكتروني. دعمك يهمّنا.",
-  "ggeConfigGenerated": "تم إعداد ملف اللعبة بنجاح.",
-  "couldntFindPrivateKey": "تعذر تشغيل النظام بشكل آمن. سيتم التشغيل بوضع عادي.",
-  "couldntFindCertificate": "لم يتم العثور على شهادة الأمان. سيتم التشغيل بدون حماية.",
-  "couldntAccessFont": "تعذر تحميل الخط. قد لا تظهر بعض النصوص بشكل صحيح.",
-  "couldntSetupDiscord": "تعذر الاتصال بـ Discord في الوقت الحالي.",
-  "configurationsMissing": "بعض الإعدادات غير مكتملة.",
-  "missingDiscordID": "لم يتم العثور على حساب Discord الخاص بك.",
-  "missingDiscordUserID": "تعذر التعرف على مستخدم Discord.",
-  "missingGuildID": "لم يتم العثور على السيرفر المرتبط بالحساب.",
-  "uuidInvalid": "بيانات الحساب غير صحيحة. يرجى التأكد منها.",
-  "gameAccountSessionAlreadyInUse": "الحساب مستخدم حاليًا من جهاز آخر.",
-  "failedToJoinEventServer": "تعذر الاتصال بسيرفر الحدث. حاول مرة أخرى لاحقًا.",
-  "noThreadWorker": "حدث خطأ داخل النظام. يرجى إعادة تشغيل البرنامج.",
-  "couldntFindWebClientIndex": "تعذر تحميل بيانات الحساب من المتصفح.",
-  "started": "تم تشغيل البرنامج بنجاح.",
-  "restartCanceledReasonBotStoppedByUser": "تم إلغاء إعادة التشغيل لأنك قمت بإيقاف البرنامج.",
-  "restartDelay": "تم إيقاف البرنامج مؤقتًا. سيتم إعادة التشغيل بعد 10 ثوانٍ...",
-  "Name": "الاسم",
-  "Description": "الوصف",
-  "Status": "الحالة",
-  "Start": "بدء",
-  "Stop": "إيقاف",
-  "Settings": "الإعدادات",
-  "Save": "حفظ",
-  "Remove": "حذف",
-  "Logs": "السجل",
-  "Link Discord": "ربط ديسكورد",
-  "Username": "اسم المستخدم",
-  "Password": "كلمة المرور",
-  "Server": "السيرفر",
-  "Plugins": "الإضافات",
-  "System": "النظام",
-  
-  "Horse Settings": "إعدادات الأحصنة",
-  "Attack Settings": "إعدادات الهجوم",
-  "Use Feather": "استخدام الريش",
-  "Use Coin": "استخدام العملات",
-  "Use Time Skips": "تخطي الوقت",
-  "Attack Left Flank": "الهجوم من الجناح الأيسر",
-  "Attack Middle": "الهجوم من الوسط",
-  "Attack Right Flank": "الهجوم من الجناح الأيمن",
-  "Attack Courtyard": "الهجوم على الفناء",
-  "Max Waves": "أقصى عدد موجات",
-  "Attack Delay (Seconds)": "تأخير الهجوم (بالثواني)",
-  "Attack Delay Randomization (Seconds)": "تأخير عشوائي للهجوم (بالثواني)",
-  
-  "Attack Barrons (Great Empire)": "مهاجمة اللصوص (الإمبراطورية)",
-  "Attack Barrons (Fire Peaks)": "مهاجمة اللصوص (قمم النار)",
-  "Attack Barrons (Glacier)": "مهاجمة اللصوص (الجليد الأبدي)",
-  "Attack Barrons (Burning Sands)": "مهاجمة اللصوص (الصحراء الحارقة)",
-  "Attack Fortress (Fire Peaks)": "مهاجمة الحصون (قمم النار)",
-  "Attack Fortress (Everwinter Glacier)": "مهاجمة الحصون (الجليد الأبدي)",
-  "Attack Fortress (Burning Sands)": "مهاجمة الحصون (الصحراء)",
-  "Attack Nomad Camps": "مهاجمة معسكرات البدو",
-  "Attack Samurai Camps": "مهاجمة معسكرات الساموراي",
-  "Attack Beri Camps": "مهاجمة معسكرات بيريموند",
-  "Attack Khan": "مهاجمة معسكر الخان",
-  "Attack Aqua Forts": "مهاجمة جزر العاصفة",
-  "Attack Level 40": "مهاجمة مستوى 40",
-  "Attack Level 50": "مهاجمة مستوى 50",
-  "Attack Level 60": "مهاجمة مستوى 60",
-  "Attack Level 70": "مهاجمة مستوى 70",
-  "Attack Level 80": "مهاجمة مستوى 80",
-  "Hits Barrons": "يهاجم اللصوص تلقائيًا",
-  "Attack": "الهجوم",
-  "Handles Hits": "إدارة الهجمات",
-  "Res Send": "إرسال الموارد",
-  "Ressend": "إعادة إرسال الموارد",
-  "Feast": "الوليمة",
-  "Mead replace": "إصلاح باستخدام الشراب",
-  "MeadRep": "إصلاح الشراب",
-  "Timer": "المؤقت",
-  "Discord": "بوت ديسكورد",
-  "Outgoing": "الرسائل الصادرة",
-  "Fortress": "الحصون",
-  "Aqua Tower": "أبراج العاصفة",
-  "Slash Commands": "أوامر الدردشة",
-  "Alert": "تنبيه",
-  "Chat": "الدردشة",
-  "Aquaisland": "جزر العاصفة",
-  
-  "Hits fortresses": "يهاجم الحصون تلقائيًا",
-  "Hits Aqua Forts": "يهاجم جزر العاصفة",
-  "Hits Nomad Camps": "يهاجم معسكرات البدو",
-  "Hits Samurai Camps": "يهاجم معسكرات الساموراي",
-  "Hits Beri Camps": "يهاجم معسكرات بيريموند",
-  "Hits Khan Camps": "يهاجم معسكر الخان",
-  "Sends Resources": "يرسل الموارد تلقائيًا",
-  "Repair for Mead": "إصلاح باستخدام الشراب"
+	"startBanner": "لو عندك أي مشكلة، ياريت تبلغنا على GitHub أو تتواصل معنا عبر Discord أو البريد الإلكتروني. دعمك يهمّنا.",
+	"ggeConfigGenerated": "تم إعداد ملف اللعبة بنجاح.",
+	"couldntFindPrivateKey": "تعذر تشغيل النظام بشكل آمن. سيتم التشغيل بوضع عادي.",
+	"couldntFindCertificate": "لم يتم العثور على شهادة الأمان. سيتم التشغيل بدون حماية.",
+	"couldntAccessFont": "تعذر تحميل الخط. قد لا تظهر بعض النصوص بشكل صحيح.",
+	"couldntSetupDiscord": "تعذر الاتصال بـ Discord في الوقت الحالي.",
+	"configurationsMissing": "بعض الإعدادات غير مكتملة.",
+	"missingDiscordID": "لم يتم العثور على حساب Discord الخاص بك.",
+	"missingDiscordUserID": "تعذر التعرف على مستخدم Discord.",
+	"missingGuildID": "لم يتم العثور على السيرفر المرتبط بالحساب.",
+	"uuidInvalid": "بيانات الحساب غير صحيحة. يرجى التأكد منها.",
+	"gameAccountSessionAlreadyInUse": "الحساب مستخدم حاليًا من جهاز آخر.",
+	"failedToJoinEventServer": "تعذر الاتصال بسيرفر الحدث. حاول مرة أخرى لاحقًا.",
+	"noThreadWorker": "حدث خطأ داخل النظام. يرجى إعادة تشغيل البرنامج.",
+	"couldntFindWebClientIndex": "تعذر تحميل بيانات الحساب من المتصفح.",
+	"started": "تم تشغيل البرنامج بنجاح.",
+	"restartCanceledReasonBotStoppedByUser": "تم إلغاء إعادة التشغيل لأنك قمت بإيقاف البرنامج.",
+	"restartDelay": "تم إيقاف البرنامج مؤقتًا. سيتم إعادة التشغيل بعد 10 ثوانٍ...",
+	
+	"name": "الاسم",
+	"description": "الوصف",
+	"status": "الحالة",
+	"start": "بدء",
+	"stop": "إيقاف",
+	"settings": "الإعدادات",
+	"save": "حفظ",
+	"remove": "حذف",
+	"logs": "السجل",
+	"linkDiscord": "ربط ديسكورد",
+	"username": "اسم المستخدم",
+	"password": "كلمة المرور",
+	"server": "السيرفر",
+	"plugins": "الإضافات",
+	"system": "النظام",
+
+	"horseSettings": "إعدادات الأحصنة",
+	"attackSettings": "إعدادات الهجوم",
+	"useFeather": "استخدام الريش",
+	"useCoin": "استخدام العملات",
+	"useTimeSkips": "تخطي الوقت",
+	"attackLeftFlank": "الهجوم من الجناح الأيسر",
+	"attackMiddle": "الهجوم من الوسط",
+	"attackRightFlank": "الهجوم من الجناح الأيمن",
+	"attackCourtyard": "الهجوم على الفناء",
+	"maxWaves": "أقصى عدد موجات",
+	"attackDelaySeconds": "تأخير الهجوم (بالثواني)",
+	"attackDelayRandomizationSeconds": "تأخير عشوائي للهجوم (بالثواني)",
+	"attackLevel40": "مهاجمة مستوى 40",
+	"attackLevel50": "مهاجمة مستوى 50",
+	"attackLevel60": "مهاجمة مستوى 60",
+	"attackLevel70": "مهاجمة مستوى 70",
+	"attackLevel80": "مهاجمة مستوى 80",
+
+	"feast" : "الوليمة",
+	"meadReplace" : "إصلاح الشراب",
+	"resourceSend" : "إرسال الموارد",
+	"timer": "المؤقت",
+	"attack": "الهجوم",
+	"sharedBarronAttackLogic": "اللصوص",
+	"sharedFortressAttackLogic": "الحصون",
+	"incomingAttacks": "تنبيه",
+	"aquaIsland": "جزر العاصفة",
+	"aquaTower": "أبراج العاصفة",
+	"attackStormForts": "مهاجمة جزر العاصفة",
+	"attackSamurai": "مهاجمة معسكرات الساموراي",
+	"attackNomads": "مهاجمة معسكرات البدو",
+	"attackKhan": "مهاجمة معسكر الخان",
+	"attackBerimond": "مهاجمة معسكرات بيريموند",
+	"attackBarronsBurningSands": "مهاجمة اللصوص (الصحراء الحارقة)",
+	"attackBarronsEverWinterGlacier": "مهاجمة اللصوص (الجليد الأبدي)",
+	"attackBarronsFirePeaks": "مهاجمة اللصوص (قمم النار)",
+	"attackBarronsGreatEmpire": "مهاجمة اللصوص (الإمبراطورية)",
+	"attackFortressesBurningSands": "مهاجمة الحصون (الصحراء)",
+	"attackFortressesEverWinterGlacier": "مهاجمة الحصون (الجليد الأبدي)",
+	"attackFortressesFirePeaks": "مهاجمة الحصون (قمم النار)",
+	"chat": "الدردشة",
+	"discord": "بوت ديسكورد",
+	"fortress": "الحصون",
+	"outgoingAttacks": "الرسائل الصادرة",
+	"slashCommands": "أوامر الدردشة",
+	"extraSlashCommands": "أوامر الدردشة",
+	"barracks": "Barracks",
+	"stationOnHit": "Station on Hit",
+	"buyTools": "Buy Tools",
+	"blacksmith": "Blacksmith",
+	"spendAffluence": "Spend Affluence",
+	"grandTornament": "Grand Tornament",
+	"externalEventHelper": "OR/BTH Buy Feathers/Troops",
+	"helpRequests": "Help requests",
+	"nomadShop": "Nomad Shop",
+	"samShop": "Samurai Shop",
+	"attackBerimondInvasion": "Attack Berimond Kingdom",
+	"ggeBot": "GGE BOT",
+
+	"botConfigReloaded": "Config has been reload",
+	"closedReason": "Closed forcefully reason: ",
+	"timedOut": "Timed out",
+	"errorCount": "Error Count: ",
+	"hitCount": "Hit count: ",
+	"retryLogin": "Retry Login in: ",
+	"retryLoginSeconds": " seconds",
+	"retryLoginHours": " hours",
+	"loggedIn": "Logged in",
+	"loggedInWithoutEventData": " (without event data)",
+	"featuresMightNotWork": "Some features might not work.",
+	"grabbedFortuneTellerFortune": "Grabbed fortune teller fortune",
+	"GrabbedOffering": "Grabbed offering: ",
+	"grabbedLudwig": "Ludwig",
+	"grabbedKnight": "Knight",
+	"grabbedBeatrice": "Beatrice",
+	"noMoreSkips": "No more skips",
+	"usingSkip": "Using Skip: ",
+	"couldntGetAsset": "Couldnt get asset falling back",
+	"consumed": "Consumed ",
+	"notEnoughFoodToFeast": "Not enough food to feast",
+	"wontRunWithoutStormUnlocked": "Won't run without storm unlocked",
+	"dontNeedToSendMead": "Don't need to send mead",
+	"notEnoughTimeForMeadReplace": "You may lose your troops aim above: ",
+	"hoursForFoodMeadReplace": " Hours of food consumption",
+	"dontNeedMeadForAnother": "Don't need mead for another: ",
+	"hoursMeadReplace": " hours",
+	"sentMeadReplace": "Sent ",
+	"meadToMeadReplace": "mead to ",
+	"failedToSendMead": "Failed to send Mead to ",
+	"sentResSend": "Sent ",
+	"toResSend": "to ",
+	"hoursOptionIsNotNumber": "Hours option is not number",
+	"noStablesCoinHorse": "No stables detected defaulting to walking",
+	"attackDelayAttack": "Attack delay: ",
+	"takingBreakPreventBan": "Taking a break to prevent ban for: ",
+	"failedToHandleAttack": "Failed to handle attack correctly: ",
+	"shuttingDownEvent": "Shutting down event reason: ",
+	"eventEnded": "Event Ended",
+	"hittingTargetAttack": "Hitting target ",
+	"tillImpactAttack": " till impact",
+	"broughtCoins": "Brought Coins",
+	"broughtDeco": "Brought Deco",
+	"broughtXP": "Brought XP",
+	"waitingForNextPossibleHit": "Waiting ",
+	"waitingForNextPossibleHit2": " for next possible hit",
+	"rageTooHigh": "Rage higher than expected",
+	"rageTrigger": "Rage Triggered",
+	"scoreReached": "Score Reached",
+	"noMatchingCommandWasFound": "No matching command was found ",
+	"noCommands": "No commands",
+	"missingChannel": "Missing Channel",
+	"barracksLevelNotDefined": "Level option was not defined",
+	"cantFindSourceCastle": "Could not find source castle",
+	"couldNotRecruitReason": "Could not recruit reason: ",
+	"couldNotRecruitReasonTroopLimitReached": "Troop limit reached",
+	"failedToRecruitTroops": "Failed to recruit troops at: ",
+	"recruitedTroops": " Troops recruited",
+	"shouldntRunOutOfSkips": "Shouldn't run out of skips",
+	"buyingFeathers": "Buying fast horse feathers",
+	"buying5MinuteSkips": "Buying 5 minute skips",
+	"laddersBrought": " Ladders brought",
+	"shieldsBrought": " Shields brought",
+	"couldntFindPlayer": "Could not find player",
+	"notFleeing": "Not Fleeing Reason: ",
+	"attackerTooWeak": "Attacker too weak",
+	"underBird": "Under bird",
+	"noobProtection": "Noob protection",
+	"cantSeeArmy": "Can't see army",
+	"troopCountTooSmall": "Troop count too small",
+	"tooLittleTroopsInCastle": "Too little troops in castle",
+	"noValidCastleChoice": "No valid castle choice",
+	"tryingToSend": "Trying to send ",
+	"tryingToSendTo": " To ",
+	"shopBuying": "Buying ",
+	"broughtShop": "Brought everything in shop",
+	"eventNotRunning": "Event not running",
+	"affluenceTicketsSpent": "Affluence Tickets Spent",
+	"couldNotOpenBerimond": "Could not open berimond need: 10k stone and wood",
+	"failedToSendTroopsOver": "Failed to send troops over",
+	"troopsMovedOver": " troops moved over",
+	"couldntGatherTools": "Could not gather tools",
+	"tryingToReroll": "Trying to reroll: ",
+	"loading": "loading...",
+	"couldntFindSkip": "Couldn't find skip",
+	"couldntRecruitMoreTroops": "Could not recruit more troops"
 }
