--- a/website/public/locales/en.json
+++ b/website/public/locales/en.json
@@ -204,7 +204,7 @@
 	"lowValueChests": "Low value chests First",
 	"reputation": "Reputation",
 	"wavesTillChests": "Waves till chests",
-	"eventWallToolsFirst": "Event Wall Tools First",
+	"eventWallToolsFirst": "Event wall tools first",
 	"scoreShutoff": "Score shut off",
 	"eventDifficulty": "Event difficulty",
 	"channelID": "Channel ID",
