--- a/website/public/locales/ar.json
+++ b/website/public/locales/ar.json
@@ -178,5 +178,51 @@
 	"tryingToReroll": "Trying to reroll: ",
 	"loading": "loading...",
 	"couldntFindSkip": "Couldn't find skip",
-	"couldntRecruitMoreTroops": "Could not recruit more troops"
+	"couldntRecruitMoreTroops": "Could not recruit more troops",
+	
+	"useFood": "Use food troops",
+	"attackLeft": "Attack left flank",
+	"attackRight": "Attack right flank",
+	"feastFoodReduction": "Feast food reduction",
+	"minimumFood": "Minimum food",
+	"minimumFoodRate": "Minimum food rate",
+	"hours": "Hours",
+	"commanderWhiteList" : "Commander Whitelist",
+	"attackWaves": "Waves",
+	"noEventTools": "No event tools",
+	"lowValueChests": "Low value chests First",
+	"reputation": "Reputation",
+	"wavesTillChests": "Waves till chests",
+	"eventWallToolsFirst": "Event wall tools first",
+	"scoreShutoff": "Score shut off",
+	"eventDifficulty": "Event difficulty",
+	"channelID": "Channel ID",
+	"alertChannelID": "Alert channel ID",
+	"hideDiscordName": "Hide Discord name",
+	"stormChannelID": "Storm channel ID",
+	"level": "Level",
+	"troopType": "Troop type",
+	"randomizeTiming": "Randomize timing",
+	"ladderAmmount": "Ladder ammount",
+	"shieldAmmount": "Shield ammount",
+	"buyDecoration": "Buy decoration",
+	"fastHelp": "Fast Help",
+	"ticketAmmount": "Ticket ammount",
+	"minMightPoints": "Minimum might points",
+	"minCastleTroopCount": "Minimum castle troop count",
+	"minHitTroopCount": "Minimum hit troop count",
+	"stationPlayerName": "Station player name",
+	"stationTime": "Station time",
+	"minTroopSendCount": "Minimum troop send count",
+	"allowLvl40Hard": "Lvl 40",
+	"allowLvl50Hard": "Lvl 50",
+	"allowLvl60Hard": "Lvl 60",
+	"allowLvl70Hard": "Lvl 70",
+	"allowLvl80Hard": "Lvl 80",
+	"allowLvl60Easy": "Lvl 60",
+	"allowLvl70Easy": "Lvl 70",
+	"allowLvl80Easy": "Lvl 80",
+	"buyCoins": "Buy coins",
+	"buyXP": "Buy XP",
+	"noChests": "No chests"
 }
