Update README with Discord contact info
Added Discord contact information for collaboration.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Hey! I am currently looking for native speakers of other languages to help make this project more accessable for other regions.
 Check out the testing branch help make this repo amazing :D
-
+Discord: Darrenthebozz
 Special Thanks:
   Timicim & Un1c4on (For Turkish translation)
   xLukaZ (For German translation)
