Clarify Discord contact and add storm cargo upgrade
Updated README to clarify Discord contact information and added a new feature.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Hey! I am currently looking for native speakers of other languages to help make this project more accessable for other regions.
 Check out the testing branch help make this repo amazing :D
-Discord: Darrenthebozz
+Discord: Darrenthebozz (If you need any help, have questions, or are looking for more.)
 Special Thanks:
   Timicim & Un1c4on (For Turkish translation)
   xLukaZ (For German translation)
@@ -55,3 +55,4 @@ Extra Plugins (Not Public):
   Grand Tornament (Reroll at selected time)
   Affluence Ticket spender
   Birded players slash commands
+  Automatic storm cargo upgrade
